@@ -87,6 +87,20 @@ class GPGProfile:
         else:
             self.hidden_recipients = []
 
+        self.gpg_major = self.get_gpg_major(globals.gpg_binary)
+
+    _version_re = re.compile(r'^gpg.*\(GnuPG\) (?P<maj>[0-9])\.[0-9]+\.[0-9]+$')
+
+    def get_gpg_major(self, binary):
+        gpg = gpginterface.GnuPG()
+        if binary is not None:
+            gpg.call = binary
+        res = gpg.run(["--version"], create_fhs=["stdout"])
+        line = res.handles["stdout"].readline().rstrip()
+        mtc = self._version_re.search(line)
+        if mtc is not None:
+            return int(mtc.group("maj"), 10)
+        raise GPGError("failed to determine gpg version of %s from %s" % (binary, line))
 
 class GPGFile:
     """
@@ -121,6 +135,10 @@ class GPGFile:
         gnupg.options.extra_args.append('--no-secmem-warning')
         if globals.use_agent:
             gnupg.options.extra_args.append('--use-agent')
+        elif profile.gpg_major == 2:
+            # This forces gpg2 to ignore the agent.
+            # Necessary to enforce truly non-interactive operation.
+            gnupg.options.extra_args.append('--pinentry-mode=cancel')
         if globals.gpg_options:
             for opt in globals.gpg_options.split():
                 gnupg.options.extra_args.append(opt)
